@@ -76,6 +76,7 @@ Chronological list of authors
   - Fiona Naughton
   - Robert Delgado
   - Wouter Boomsma
+  - Shantanu Srivastava
 
 External code
 -------------
